# waypoint

./: .gitignore  LICENSE.txt  NOTICE.txt  README.md  benchmark.py  embed.py  main.py  prepare_dataset.py  pretrain.py  pyproject.toml
configs/: benchmark.yaml  pretrain_gpt2_6m.yaml
configs/models/: gpt2-10m.yaml  gpt2-170m.yaml  gpt2-18m.yaml  gpt2-29m.yaml  gpt2-45m.yaml  gpt2-6m-mgm.yaml  gpt2-6m.yaml  gpt2-79m.yaml  gpt2-85m-gpt-small.yaml
configs/pretraining/: gpt2.yaml
examples/: abundance_matrix.tsv
src/: abundance_matrix.py  dataset.py  models.py  scoring.py  tokenizer.py
